--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     pariatur maxime tenetur esse, dolore dolor aliquam harum 
     voluptates aspernatur sit odit error reiciendis. Esse, delectus!
     </p>
+    ><ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
